Fix overflow problems

--- a/src/css/exam-paper.css
+++ b/src/css/exam-paper.css
@@ -122,7 +122,8 @@ hr {
 	max-width: 100%;
 	max-height: 100%;
 	box-shadow: 0 2em 5em rgba(0, 0, 64, 0.1);
-	overflow: auto;
+	overflow-y: auto;
+	overflow-x: hidden;
 }
 
 /* Make sure print behaves correctly */
@@ -148,7 +149,8 @@ hr {
 	display: flex;
 	flex-direction: column;
 	padding: 0 1mm 0;
-	max-width: 33.33333333333333%
+	width: 33.33333333333333%;
+	max-width: 100%;
 }
 
 .wrapper section:first-child {
